// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`PanelHeader snapshots > should render the dropdown menu variant 1`] = `
<DocumentFragment>
  <div
    class="_ComponentHeader_163cd5"
    data-test-component-header="rectangle"
  >
    <div
      class="_ComponentHeader__label_163cd5"
    >
      <button
        aria-expanded="false"
        aria-haspopup="dialog"
        aria-label="Element type"
        class="_ButtonMenu_7516ba _PanelHeader__trigger_8adac9"
        data-state="closed"
        type="button"
      >
        <span
          class="_PanelHeader__label_8adac9"
        >
          Rectangle
          <svg
            class="Icon"
            data-fpl-icon-size="16"
            fill="none"
            height="16"
            style="color: var(--color-neutral-1);"
            viewBox="0 0 16 16"
            width="16"
          >
            <path
              d="M9.768 6.768a.5.5 0 0 1 .707.707l-2.12 2.121a.5.5 0 0 1-.708 0L5.525 7.475a.5.5 0 0 1 .708-.707l1.768 1.767z"
              data-svg-property="fill"
              fill="white"
            />
          </svg>
        </span>
      </button>
    </div>
    <div
      class="_ComponentHeader__buttons_163cd5"
    >
      <button
        type="button"
      >
        buttons
      </button>
    </div>
  </div>
</DocumentFragment>
`;

exports[`PanelHeader snapshots > should render the plain label variant 1`] = `
<DocumentFragment>
  <div
    class="_ComponentHeader_163cd5"
    data-test-component-header="rectangle"
  >
    <div
      class="_ComponentHeader__label_163cd5"
    >
      <span
        class="_PanelHeader__label_8adac9"
      >
        Rectangle
      </span>
    </div>
    <div
      class="_ComponentHeader__buttons_163cd5"
    >
      <button
        type="button"
      >
        buttons
      </button>
    </div>
  </div>
</DocumentFragment>
`;
